--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -19,12 +17,10 @@
     </title>
   </head>
   <body>
-    <div
-      class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans"
-    >
+    {% include "header.html" %}
       {% block content %}
 
       {% endblock content %}
-    </div>
+    {% include "footer.html" %}
   </body>
 </html>
