Log in and sign up

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <title>
       {% if title %}
       {{ title }}
-      {% else %} Flask Todo App with Tailwind
+      {% else %} Feedback Web App
       {% endif %}
     </title>
   </head>
