--- a/templates/login.html
+++ b/templates/login.html
@@ -6,15 +6,21 @@
         <div class="col-lg-6 ">
             <h1 class="text-center">Login to your account </h1>
             <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus libero ut dui aliquet, dictum tincidunt nisl tempus. </p>
+            
+            {% if error_message %}
+                <div class="error">
+                    <p>{{error_message}}</p>
+                </div>
+            {% endif %}
             <form action="/login_action" method="POST">
                 <div class="form-group">
                   <label for="emailLogin">Email address</label>
-                  <input type="email" class="form-control" name="emailLogin" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" class="form-control" name="emailLogin" aria-describedby="emailHelp" placeholder="Enter email" required>
                   <small name="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                   <label for="passwordlogin">Password</label>
-                  <input type="password" class="form-control" name="passwordlogin" placeholder="Password">
+                  <input type="password" class="form-control" name="passwordlogin" placeholder="Password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
               </form>
