--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,23 +5,23 @@
         <div class="col-lg-3"></div>
         <div class="col-lg-6 ">
             <h1 class="text-center">Create an account</h1>
-            <form>
+            <form action="/signup-action" method="POST">
                 <div class="form-group">
                     <label for="namesignup">Name</label>
-                    <input type="text" class="form-control" name="namesignup" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="text" class="form-control" name="namesignup" placeholder="Enter name" required>
                   </div>
                 <div class="form-group">
                   <label for="emailsignup">Email address</label>
-                  <input type="email" class="form-control" name="emailsignup" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" class="form-control" name="emailsignup" placeholder="Enter email" required>
                   <small name="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                   <label for="passwordsignup">Password</label>
-                  <input type="password" class="form-control" name="passwordsignup" placeholder="Password">
+                  <input type="password" class="form-control" name="passwordsignup" placeholder="Password" required>
                 </div>
                 <div class="form-group">
                     <label for="confirmpasswordsignup">Confirm Password</label>
-                    <input type="password" class="form-control" name="confirmpasswordsignup" placeholder="Password">
+                    <input type="password" class="form-control" name="confirmpasswordsignup" placeholder="Password"required>
                 </div>
                 <div class="form-group">
                     <label for="role">Role</label>
