--- a/templates/upload-project.html
+++ b/templates/upload-project.html
@@ -5,30 +5,38 @@
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
             <h1 class="text-center">Create project</h1>
-            <form action="/upload-project-action" method="POST">
+            <form action="/upload-project-action" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" name="title" placeholder="Enter Title" required>
                 </div>
                 <div class="form-group">
                     <label for="projectImage">Upload project image</label>
-                    <input type="file" class="form-control-file" name="projectImage">
+                    <input type="file" class="form-control-file" name="projectImage" required>
                 </div>
+                
+                
                 <div class="form-group">
                     <label for="projectdescription">Description</label>
                     <textarea class="form-control" name="projectDescription" rows="10"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="projectdescription">Category</label>
+                    <input class="form-control" name="projectCategory" >
                   </div>
                 <div class="form-group">
                     <label for="link">Link</label>
                     <input type="password" class="form-control" name="link" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary">Create project</button>
-              </form>
+            </form>
+            <a href="">See project</a>
         </div>
-        <div class="col-lg-2"></div>
+        <div class="col-lg-2">
+        </div>
     </div>
    
-
+{{file}}
 </main>
 
 {% endblock content %}
