--- a/templates/project.html
+++ b/templates/project.html
@@ -7,8 +7,10 @@
             {{name}}
             <h1 class="text-center">{{result[1]}}</h1>
             <img src="{{result[2]}}">
+            <h4><a>{{author[0]}}</a></h4>
             <p>{{result[3]}}</p>
             <p>{{result[4]}}</p>
+            
         </div>
         <div class="col-lg-2">
         </div>
