--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <!-- Full width column -->
 <!-- hero -->
 {{name}}
+{% if  name == None %}
 <div class="container py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
@@ -17,6 +18,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
 <!-- project section -->
 <main class="container">
     <section class="home-project d-flex justify-content-between">
@@ -35,5 +37,4 @@
        </section>
 
 </main>
-
 {% endblock content %}
