--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,8 @@
 
+/* Projects Section */
+img.project-thumbnail {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 4px;
+}
