--- a/templates/project.html
+++ b/templates/project.html
@@ -8,6 +8,7 @@
             <h1 class="text-center">{{result[1]}}</h1>
             <img src="{{result[2]}}">
             <h4><a>{{author[0]}}</a></h4>
+            <img src="{{author_avatar}}">
             <p>{{result[3]}}</p>
             <p>{{result[4]}}</p>
             
