--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
         <div class="col-lg-3"></div>
         <div class="col-lg-6 ">
             <h1 class="text-center">Create an account</h1>
-            <form action="/signup-action" method="POST">
+            <form action="/signup-action" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="namesignup">Name</label>
                     <input type="text" class="form-control" name="namesignup" placeholder="Enter name" required>
@@ -27,6 +27,10 @@
                     <label for="role">Role</label>
                     <input type="password" class="form-control" name="role" placeholder="Password">
                 </div>
+                <div class="form-group">
+                  <label for="avatar">Avatar</label>
+                  <input type="file" class="form-control-file" name="avatar">
+              </div>
                 <button type="submit" class="btn btn-primary">Login</button>
               </form>
         </div>
