Fixed project page content

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   {% endif %}
 <!-- project section -->
 <main class="container">
-    <section class="home-project d-flex justify-content-between">
+    <section class="home-project d-flex">
         {% for row in projects %}
           <div class="project-single col-lg-3 me-5">
             <img class="project-thumbnail" src="{{row['img_url']}}" />
