--- a/templates/project.html
+++ b/templates/project.html
@@ -4,7 +4,15 @@
     <div class="row  justify-content-center ">
         <div class="col-lg-2"></div>
         <div class="col-lg-8 project-single">
+            {{result}}
+            {{current_user_id}}
             {{name}}
+            {% if  current_user_id  == result[5]  %}
+            <div class="project-update">
+                <a>Edit</a>
+                <a>Delete</a>
+            {% endif %}
+            </div>
             <h1 class="text-center">{{result[1]}}</h1>
             <img src="{{result[2]}}">
             <h4><a>{{author[0]}}</a></h4>
