--- a/templates/upload-project.html
+++ b/templates/upload-project.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="form-group">
                     <label for="projectdescription">Category</label>
-                    <input class="form-control" name="projectCategory" >
+                    <input class="form-control" name="projectCategory" required >
                   </div>
                 <div class="form-group">
                     <label for="link">Link</label>
-                    <input type="password" class="form-control" name="link" placeholder="Password">
+                    <input type="text" class="form-control" name="link" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary">Create project</button>
             </form>
