--- a/templates/header.html
+++ b/templates/header.html
@@ -2,9 +2,9 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/home" class="nav-link px-2 link-secondary">Home</a></li>
+          <li><a href="/home" class="nav-link px-2 link-dark fw-bold">Home</a></li>
           {% if  name != None %}
-          <li><a href="/upload-project" class="nav-link px-2 link-dark">Upload project</a></li>
+          <li><a href="/upload-project" class="nav-link px-2 link-dark fw-bold">Upload project</a></li>
           {% endif %}
         </ul>
         {% if  name != None %}
@@ -26,8 +26,8 @@
             </div>
         {% else %}
         <ul class="nav">
-          <li><a class="nav-link px-2 link-secondary" href="/login">Log in</a></li>  
-          <li><a href="/signup" class="nav-link px-2 link-dark">Signup</a></li>
+          <li><a class="nav-link px-2 link-dark fw-bold" href="/login">Log in</a></li>  
+          <li><a href="/signup" class="nav-link px-2 link-dark fw-bold">Signup</a></li>
         </ul>
         
 
