--- a/templates/base.html
+++ b/templates/base.html
@@ -16,12 +16,12 @@
       {% endif %}
     </title>
   </head>
-  <body>
+  <body class="{% block body_class %} {% endblock body_class %}">
     {% include "header.html" %}
       {% block content %}
-
       {% endblock content %}
     {% include "footer.html" %}
+    <script src="../static/js/custom.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>  
   </body>
