--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block body_class %}log-in{% endblock body_class %}
+{% block content %}
 <!-- project section -->
 <main class="container">
     <div class="row  justify-content-center ">
