--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block body_class %}sign-up{% endblock body_class %}
+{% block content %}
 <!-- project section -->
 <main class="container">
     <div class="row  justify-content-center ">
