see if it works

--- a/templates/project.html
+++ b/templates/project.html
@@ -16,13 +16,13 @@
                 <h1 class="text-center">{{result[1]}}</h1>
                 <p class="category">{{result[4]}}</p>
             </div>
+            <div class="author-information d-flex mt-3 mb-3">
+                <h4 ><a class="mr-3">{{author[0]}}</a></h4>
+                <img class="rounded-circle" width="32" height="32"src="{{author_avatar[0]}}">
+            </div>
+            <img class="main-img mb-5" src="{{result[2]}}">
             
-            <img class="main-img" src="{{result[2]}}">
-            <h4><a>{{author[0]}}</a></h4>
-            <img src="{{author_avatar}}">
             <p>{{result[3]}}</p>
-            
-            
         </div>
         <div class="col-lg-2">
         </div>
