--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,4 +79,19 @@ img.project-thumbnail {
 .project-single .main-img {
     width: 100%;
     height: 500px;
+    object-fit: cover;
+}
+p.category {
+    width: 126px;
+    padding: 7px 17px;
+    border-radius: 29px;
+    background-color: #ffc2fd;
+}
+.page_title {
+    position: relative;
+}
+.project-single .category {
+    position: absolute;
+    right: 0;
+    top: 10px;
 }
