--- a/templates/upload-project.html
+++ b/templates/upload-project.html
@@ -16,19 +16,18 @@
                 </div>
                 <div class="form-group">
                     <label for="projectdescription">Description</label>
-                    <textarea class="form-control" name="projectDescription" rows="10"></textarea>
+                    <textarea class="form-control" name="projectDescription" rows="10" placeholder="Enter project description"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="projectdescription">Category</label>
-                    <input class="form-control" name="projectCategory" required >
+                    <input class="form-control" name="projectCategory" placeholder="Enter category" required >
                   </div>
                 <div class="form-group">
                     <label for="link">Link</label>
                     <input type="text" class="form-control" name="link" placeholder="Password">
                 </div>
-                <button type="submit" class="btn btn-primary">Create project</button>
+                <button type="submit" class="btn btn-primary mt-4">Create project</button>
             </form>
-            <a href="">See project</a>
         </div>
         <div class="col-lg-2">
         </div>
