--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,22 @@ body {
     font-family: 'Poppins', sans-serif;
     color: #000;
     position: relative;
+    font-size: 16px;
 }
-a:not(.btn) {
+a {
+    transition: color 0.2s, border-bottom 0.2s;
+}
+a:not(.btn):not(.nav-link) {
     color: inherit;
+    padding-bottom: 2px;
     text-decoration: none !important;
+}
+a:not(.btn):not(.nav-link):hover {
+    
+    border-bottom: 2px solid #48f1ab;
+}
+a.nav-link:hover {
+    opacity: 0.8;
 }
 h1 {
     margin-bottom: 20px;
@@ -29,6 +41,12 @@ h1 {
     color: #fff;
     background-color: #000;
     border-color: #000;
+    transition: all 0.2s ease-in;
+}
+.btn-primary:hover {
+    color: #000;
+    background-color: #48f1ab;
+    border-color: #48f1ab;
 }
 
 /* Projects Section */
@@ -86,6 +104,8 @@ p.category {
     padding: 7px 17px;
     border-radius: 29px;
     background-color: #ffc2fd;
+    text-align: center;
+    font-size: 14px;
 }
 .page_title {
     position: relative;
@@ -94,4 +114,25 @@ p.category {
     position: absolute;
     right: 0;
     top: 10px;
+}
+
+/* Form Styling */
+label {
+    font-weight: 600;
+    margin-bottom: 5px;
+    margin-top: 15px;
+
+}
+input.form-control,
+textarea.form-control {
+    border: none;
+    background-color: #faf9f9;
+    border-radius: 2px;
+    padding: 10px;
+}
+
+/* footer */
+footer {
+    border-top: 1px solid #000;
+    padding: 50px 0;
 }
