--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                   <label for="passwordlogin">Password</label>
                   <input type="password" class="form-control" name="passwordlogin" placeholder="Password" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary mt-4">Login</button>
               </form>
         </div>
         <div class="col-lg-3"></div>
