--- a/templates/project.html
+++ b/templates/project.html
@@ -5,11 +5,10 @@
 <main class="container">
     <div class="row  justify-content-center ">
         <div class="col-lg-2"></div>
-        <div class="col-lg-8 project-single">
-            
-            {% if  current_user_id  == result[5]  %}
+        <div class="col-lg-8 project-single pt-3">
+            {% if  current_user_id  == result[6]  %}
             <div class="project-update">
-                <a href="/edit-project?id={{result[0]}}">Edit</a>
+                <a href="/edit-project?id={{result[0]}}">Edit Project</a>
             </div>
             {% endif %}
             <div class="page_title mt-2 mb-2">
@@ -21,8 +20,8 @@
                 <img class="rounded-circle" width="32" height="32"src="{{author_avatar[0]}}">
             </div>
             <img class="main-img mb-5" src="{{result[2]}}">
-            
-            <p>{{result[3]}}</p>
+            <p class="mt-4 mb-4">{{result[3]}}</p>
+            <a href="{{result[5]}}" target="_blank">See Project</a>
         </div>
         <div class="col-lg-2">
         </div>
