--- a/templates/signup.html
+++ b/templates/signup.html
@@ -33,7 +33,7 @@
                   <label for="avatar">Avatar</label>
                   <input type="file" class="form-control-file" name="avatar">
               </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary mt-4">Login</button>
               </form>
         </div>
         <div class="col-lg-3"></div>
