Fixed css, issues with login creation of different users

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
         </ul>
         {% if  name != None %}
             <div class="d-flex text-end">
-            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+            <a href="#" class="d-block link-dark text-decoration-none" >
               {% if  avatar %}
                 <img src="{{avatar}}" alt="avatar" width="32" height="32" class="rounded-circle">
               {% else %}
