--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,9 @@ body {
     position: relative;
     font-size: 16px;
 }
+main {
+    min-height: 500px;
+}
 a {
     transition: color 0.2s, border-bottom 0.2s;
 }
@@ -49,12 +52,12 @@ h1 {
     border-color: #48f1ab;
 }
 
-/* Projects Section */
-img.project-thumbnail {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 4px;
+.error {
+    border: 1px solid red;
+    padding: 10px;
+    text-align: center;
+    color: red;
+    border-radius: 2px;
 }
 
 /* Home page */
@@ -76,6 +79,9 @@ img.project-thumbnail {
     position: relative;
     z-index: 99;
 }
+.home.loggedin header {
+    border-bottom: 1px solid #dee2e6!important;
+}
 
 .home main.container {
     margin-top: 500px;
@@ -84,9 +90,26 @@ img.project-thumbnail {
 .home.loggedin main.container {
     margin-top: 0px;
 }
+body > main > section > div:nth-child(3) {
+    margin-right: 0;
+}
 
 .project-single > .project-information {
     margin-top: 20px;
+}
+.project-information {
+    position: relative;
+}
+.home .project-single .category {
+    top: -320px;
+    left: -12px;
+}
+/* Projects Section */
+img.project-thumbnail {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 4px;
 }
 
 
