--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center my-5">
+<footer class="d-flex flex-wrap justify-content-between align-items-center mt-5">
     <div class="container">
         <p class="col-md-12 mb-0 text-center">© 2021 Made by <a href="https://github.com/xiomara-masmela">Xio</a></p
     </div>   
