--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,13 +27,13 @@
                 </div>
                 <div class="form-group">
                     <label for="role">Role</label>
-                    <input type="password" class="form-control" name="role" placeholder="Password">
+                    <input type="text" class="form-control" name="role" placeholder="Password">
                 </div>
                 <div class="form-group">
                   <label for="avatar">Avatar</label>
                   <input type="file" class="form-control-file" name="avatar">
               </div>
-                <button type="submit" class="btn btn-primary mt-4">Login</button>
+                <button type="submit" class="btn btn-primary mt-4">Sign up</button>
               </form>
         </div>
         <div class="col-lg-3"></div>
