fixed bugs and models

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <section class="home-project d-flex flex-wrap">
         {% for row in projects %}
           <div class="project-single col-lg-3 me-2 ">
-            <img class="project-thumbnail" src="{{row['img_url']}}" />
+            <img class="project-thumbnail" src="{{row['image_url']}}" />
             <div class="project-information">
               <p class="category">{{row['category']}}</p>
               <h4 class="project-title">
