--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,8 @@
             <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus libero ut dui aliquet, dictum tincidunt nisl tempus. </p>
             {{userEmail}}
             {{username}}
-            {{users}}
+            
+            {{user}}
             {% if error_message %}
                 <div class="error">
                     <p>{{error_message}}</p>
