--- a/templates/project.html
+++ b/templates/project.html
@@ -6,25 +6,22 @@
     <div class="row  justify-content-center ">
         <div class="col-lg-2"></div>
         <div class="col-lg-8 project-single pt-3">
-            {{result[6]}}
-            {{current_user_id}}
-            {% if  current_user_id  == result[6]  %}
             <div class="project-update">
-                <a href="/edit-project?id={{result[0]}}">Edit Project</a>
+                <a href="/edit-project?id={{project[0]}}">Edit Project</a>
             </div>
-            {% endif %}
+            
             <div class="page_title mt-2 mb-2">
-                <h1 class="text-center">{{result[1]}}</h1>
-                <p class="category">{{result[4]}}</p>
+                <h1 class="text-center">{{project[1]}}</h1>
+                <p class="category">{{project[4]}}</p>
             </div>
             <div class="author-information d-flex mt-3 mb-3">
-                <h4 ><a class="mr-3">{{author[0]}}</a></h4>
-                <img class="rounded-circle" width="32" height="32"src="{{author_avatar[0]}}">
+                <h4 ><a class="mr-3">{{author[2]}}</a></h4>
+                <img class="rounded-circle" width="32" height="32"src="{{author[4]}}">
             </div>
-            <img class="main-img mb-5" src="{{result[2]}}">
-            <p class="mt-4 mb-4">{{result[3]}}</p>
-            {% if  result[5] %}
-                <a href="{{result[5]}}" target="_blank">See Project</a>
+            <img class="main-img mb-5" src="{{project[2]}}">
+            <p class="mt-4 mb-4">{{project[3]}}</p>
+            {% if  project[5] %}
+                <a href="{{project[5]}}" target="_blank">See Project</a>
             {% endif %}
         </div>
         <div class="col-lg-2">
