--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,3 +159,21 @@ footer {
     border-top: 1px solid #000;
     padding: 50px 0;
 }
+/* Comments */
+.comments {
+    border-top: 1px solid #dee2e6;
+
+}
+.feedback-content {
+    margin-top: 40px;
+    border-top: 1px solid #dee2e6;
+}
+.comment {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-bottom: 1px solid #dee2e6;
+}
+.comment:last-child{
+    border-bottom: 1px solid transparent;
+}
