--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,13 +25,13 @@
                     <label for="confirmpasswordsignup">Confirm Password</label>
                     <input type="password" class="form-control" name="confirmpasswordsignup" placeholder="Password"required>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="role">Role</label>
                     <input type="text" class="form-control" name="role" placeholder="Password">
-                </div>
+                </div> -->
                 <div class="form-group">
                   <label for="avatar">Avatar</label>
-                  <input type="file" class="form-control-file" name="avatar">
+                  <input type="file" class="form-control-file" name="avatar" required>
               </div>
                 <button type="submit" class="btn btn-primary mt-4">Sign up</button>
               </form>
