--- a/templates/edit-project.html
+++ b/templates/edit-project.html
@@ -15,6 +15,7 @@
                     <input class="btn btn-outline-danger"  type="submit" value="Delete Project">
                 </form>
             </section>
+            {{project}}
             <form action="/edit-project-action" method="POST" enctype="multipart/form-data">
                 <input type="hidden" name="projectId" value="{{project[0]}}">
                 <div class="form-group">
@@ -33,8 +34,6 @@
                     <label for="projectdescription">Category</label>
                     <input type="text"class="form-control" name="projectCategory" value="{{project[4]}}" >
                   </div>
-
-
                 <div class="form-group">
                     <label for="link">Link</label>
                     <input type="text" class="form-control" name="link" placeholder="{{project[5]}}">
