Updated category Styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,8 +135,8 @@ p.category {
 }
 .project-single .category {
     position: absolute;
-    right: 0;
-    top: 10px;
+    right: -20px;
+    top: 0px;
 }
 
 /* Form Styling */
