--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,9 @@
 {% endif %}
 <!-- project section -->
 <main class="container">
-    <section class="home-project d-flex ">
+    <section class="home-project d-flex flex-wrap  ">
         {% for row in projects %}
-          <div class="project-single col-md-6 col-lg-3 me-2 ">
+          <div class="project-single">
             <img width="324" height="300" class="project-thumbnail" src="{{row['image_url']}}" />
             <div class="project-information">
               <p class="category">{{row['category']}}</p>
