--- a/templates/edit-project.html
+++ b/templates/edit-project.html
@@ -21,10 +21,10 @@
                     <label for="title">Title</label>
                     <input type="text" class="form-control" name="title" value="{{project[1]}}">
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="projectImage">Edit project image</label>
                     <input type="file" class="form-control-file" name="projectImage" value="{{project[2]}}" >
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="projectdescription">Description</label>
                     <textarea class="form-control" name="projectDescription" rows="10" >{{project[3]}}</textarea>
