--- a/templates/project.html
+++ b/templates/project.html
@@ -34,8 +34,8 @@
                     <div class="form-group">
                     <div class="form-group">
                         <label for="feedback">Feedback</label>
-                        <input type="hidden" value="{{project[0]}}" name="projectId">
-                        <textarea class="form-control" name="feedback" rows="4" ></textarea>
+                        <input type="hidden" value="{{project[0]}}" name="projectId" >
+                        <textarea class="form-control" name="feedback" rows="4" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary mt-4">Submit</button>
                   </form>
